@@ -1,3 +1,10 @@
+2015-01-03  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[int] Add abstraction: fs
+
+	* postgres-types.scm (fs): New proc.
+	(n+m-stringifier, host-stringifier, macaddr): Use it.
+
 2014-12-31  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[qcons] Add intermediary handling for type names.
